# snakemake-executor-plugin-cluster-generic

./: CHANGELOG.md  README.md  pyproject.toml
.github/workflows/: ci.yml  release-please.yml
snakemake_executor_plugin_cluster_generic/: __init__.py
tests/: __init__.py  qdel.sh  qstatus.sh  tests.py
